# sdltrs-trs-io

./: .gitlab-ci.yml  .gitmodules  BUILDING  BUILDING.md  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  Makefile.am  PKGBUILD  README  README.md  configure.ac  default.nix  meson.build  meson_options.txt  sdltrs.desktop  template
TRS80_prog_src/: fakerom.z80
debian/: changelog  control  copyright  install  menu  rules
docs/: Credits.html  Features.html  KnownBugs.html  OSXFeatures.html  Options.html  ReleaseHistory.html  TextGUI.html  index.html
html/: Credits.html  Features.html  Options.html  ReleaseHistory.html  TextGUI.html
icons/: sdltrs.xpm
misc/: data-fetcher-posix.cpp  esp_attr.h  esp_log.cpp  esp_log.h  fileio.c  io.h  led.cpp  led.h  spi.cpp  spi.h  trsio-wrapper.cpp  trsio-wrapper.h  xray.cpp  xray.h
src/: BSDMakefile  BSDmakefile  Makefile  Makefile.bsd  Makefile.linux  Makefile.nox  Makefile.sdl2  Makefile.win32  PasteManager.c  PasteManager_sdl2.c  PasteManager_win32.c  PasteManager_x11.c  blit.c  blit.h  config.h  crc.c  debug.c  dis.c  epsonps.c  error.c  error.h  load_cmd.c  load_cmd.h  load_hex.c  main.c  reed.h  sdltrs  sdltrs.1  sdltrs_main.c  trs.h  trs_cassette.c  trs_cassette.h  trs_chars.c  trs_disk.c  trs_disk.h  trs_hard.c  trs_hard.h  trs_imp_exp.c  trs_imp_exp.h  trs_interrupt.c  (+23 more)
src/bsd/: Makefile
src/linux/: Makefile  PasteManager.c
src/macosx/: Preferences.h
src/macosx/MediaManager.nib/: designable.nib  keyedobjects.nib
src/macosx/Preferences.nib/: designable.nib  keyedobjects.nib
src/macosx/SDLMain.nib/: designable.nib  keyedobjects.nib
src/nox/: Makefile
src/sdl2/: Makefile
src/win32/: Makefile  PasteManager.c
utilities/: export.z80  fakerom.z80  xtrsrom4p.z80
